--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,12 @@
 {
-    "compilerOptions": {
-      "baseUrl": ".",
-      "paths": {
-        "@/*": ["./*"]
-      }
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
     },
-    "include": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx"],
-    "exclude": ["node_modules"]
-  }
+    "checkJs": true,
+    "jsx": "react-jsx"   // 👈 This line fixes the "Cannot use JSX" error
+  },
+  "include": ["next-env.d.ts", "src/**/*.js", "src/**/*.jsx"],
+  "exclude": ["node_modules", ".next"]
+}
