--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DATABASE_URL="file:./dev.db"
 # DATABASE_URL="postgresql://neondb_owner:npg_IQOw5KGy9msv@ep-muddy-star-a1vdplbq.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
 NEXTAUTH_SECRET="o41qIe3c8YdV5snpmo11yOWyxOnDd7Cvd1rkwBI+fuk="
+NEXT_PUBLIC_ENV_MODE=local
