added email otp based login

--- a/.env.local
+++ b/.env.local
@@ -12,3 +12,5 @@ PHONEPE_REDIRECT_URL_SANDBOX=http://localhost:3000/success
 # PHONEPE_SALT_KEY_PROD=
 # PHONEPE_BASE_URL_PROD=https://api.phonepe.com/apis/hermes
 # PHONEPE_REDIRECT_URL_PROD=https://yourdomain.com/success
+
+RESEND_API_KEY=re_3ZevDWiY_M81vKFj8HbVwcmvuSE85ij36
