added audio video

--- a/.env.local
+++ b/.env.local
@@ -14,3 +14,4 @@ PHONEPE_REDIRECT_URL_SANDBOX=http://localhost:3000/success
 # PHONEPE_REDIRECT_URL_PROD=https://yourdomain.com/success
 
 RESEND_API_KEY=re_3ZevDWiY_M81vKFj8HbVwcmvuSE85ij36
+NEXT_PUBLIC_SOCKET_SERVER_URL=https://coachconnect-q3mz.onrender.com
